k8s-error-page/01-configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: error-pages
